# pl-downloader

./: .gitignore  input.txt.template  pyproject.toml  viewtopic.txt
notebooks/: 00.ipynb  01.ipynb
